# neural-network-rust

./: .gitignore  Cargo.toml
.cargo/: Config.toml
notes/: flow.md  nn-notes.tex  text.tex
src/: lib.rs  main.rs
tests/: nn-test.rs  nn_test.rs
